Fixing issue with padding and spacing

--- a/app/assets/stylesheets/api/projects.scss
+++ b/app/assets/stylesheets/api/projects.scss
@@ -144,12 +144,15 @@
   border: none;
 }
 
-.ReactModal__Content {
-  font-size: 1em;
+.ReactModal__Content--after-open{
+  font-size: 1.2em;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
 }
 
-.ReactModalPortal div {
-
+.ReactModal__Content--after-open h2{
+  align-self: center;
 }
 
 .ReactModalPortal button {
@@ -195,6 +198,12 @@
   margin: 1%;
   font-size: 0.9em;
   border-radius: 4px;
+}
+
+.success-msg {
+  margin-bottom: 1%;
+  margin-left: 18%;
+  color: $dark-blue;
 }
 
 .upload-btn {
